  irc.look.buffer_switch_autojoin is on
* core: fix bind of keys in cursor/mouse context when key starts with "@"
  (remove the warning about unsafe key)
* core: fix truncated prefix when filters are toggled (bug #40204)
* core: add options to customize default text search in buffers:
  weechat.look.buffer_search_{case_sensitive|force_default|regex|where}
* api: add support for C++ plugins
* api: fix read of arrays in hdata functions hdata_<type> (bug #40354)
* irc: fix groups in channel nicklist when reconnecting to a server that
  supports more nick prefixes than the previously connected server
* irc: fix auto-switch to channel buffer when doing /join channel (without "#")
* irc: add option irc.look.notice_welcome_tags
* irc: add server option "default_msg_kick" to customize default kick/kickban
  message (task #12777)
* lua: fix crash on calls to callbacks during load of script

== Version 0.4.2 (2013-10-06)

* core: reduce memory used by using shared strings for nicklist and lines in
  buffers
* core: clear whole line before displaying content instead of clearing after
  the end of content (bug #40115)
* core: fix time displayed in status bar (it was one second late) (bug #40097)
* core: fix memory leak on unhook of a print hook (if using tags)
* core: fix computation of columns in output of /help (take care about size of
  time/buffer/prefix)
* core: display day change message dynamically (do not store it as a line in
  buffer), split option weechat.look.day_change_time_format into two options
  weechat.look.day_change_message_{1date|2dates}, new option
  weechat.color.chat_day_change (task #12775)
* core: add syntax "@buffer:item" in bar items to force the buffer used when
  displaying the bar item (task #12717)
* core: add search of regular expression in buffer, don't reset search type on
  a new search, select where to search (messages/prefixes), add keys in search
  context: alt+"c" (case (in)sensitive search), tab (search in
  messages/prefixes)