@@ -6410,11 +6410,14 @@ command_init ()
                      "  50 > 100      ==> 0\n"
                      "  \"50\" > \"100\"  ==> 1\n\n"
                      "Some variables are replaced in expression, using the "
-                     "format ${variable}, variable can be, by order of priority :\n"
-                     "  1. a color (format: color:xxx)\n"
-                     "  2. an option (format: file.section.option)\n"
-                     "  3. a local variable in buffer\n"
-                     "  4. a hdata name/variable (the value is automatically "
+                     "format ${variable}, variable can be, by order of "
+                     "priority :\n"
+                     "  1. a color (format: \"color:xxx\")\n"
+                     "  2. an info (format: \"info:name,arguments\", arguments "
+                     "are optional)\n"
+                     "  3. an option (format: \"file.section.option\")\n"
+                     "  4. a local variable in buffer\n"
+                     "  5. a hdata name/variable (the value is automatically "
                      "converted to string), by default \"window\" and \"buffer\" "
                      "point to current window/buffer.\n"
                      "Format for hdata can be one of following:\n"
@@ -6430,6 +6433,7 @@ command_init ()
                      "For name of hdata and variables, please look at \"Plugin "
                      "API reference\", function \"weechat_hdata_get\".\n\n"
                      "Examples:\n"
+                     "  /eval -n ${info:version}                 ==> 0.4.3\n"
                      "  /eval -n ${weechat.look.scroll_amount}   ==> 3\n"
                      "  /eval -n ${window}                       ==> 0x2549aa0\n"
                      "  /eval -n ${window.buffer}                ==> 0x2549320\n"
